[gd_scene load_steps=7 format=3 uid="uid://cfn3k18tptvpf"]

[ext_resource type="Script" path="res://Prepped Assets/Environment/sign.gd" id="1_1y61t"]
[ext_resource type="Texture2D" uid="uid://knnkx1yl76t" path="res://Sprites/Items/Sign.png" id="1_tytu3"]
[ext_resource type="FontFile" uid="uid://bogvghvlaqn45" path="res://Fonts/m5x7.ttf" id="3_mflg4"]
[ext_resource type="TileSet" uid="uid://d12b82yw2q40w" path="res://Prepped Assets/UI/ui_small_tileset.tres" id="4_r4u8d"]
[ext_resource type="TileSet" uid="uid://dqb407tvplnt8" path="res://Prepped Assets/UI/ui_large_tileset.tres" id="5_17n7k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_spbrq"]
radius = 23.0

[node name="Sign" type="Node2D" node_paths=PackedStringArray("sign_content")]
z_index = 3
y_sort_enabled = true
script = ExtResource("1_1y61t")
sign_content = NodePath("TextDialog")
label = "Warren        ↙️"

[node name="Sign" type="Sprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("1_tytu3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_spbrq")

[node name="TextDialog" type="TileMap" parent="."]
visible = false
modulate = Color(0.610125, 0.447323, 0.311508, 1)
z_index = 20
texture_filter = 1
tile_set = ExtResource("5_17n7k")
format = 2
layer_0/tile_data = PackedInt32Array(-196606, 131072, 1, -262142, 131072, 0, -196607, 65536, 1, -262143, 65536, 0, -196608, 65536, 1, -262144, 65536, 0, -131073, 65536, 1, -196609, 65536, 0, -131074, 65536, 1, -196610, 65536, 0, -131075, 0, 1, -196611, 0, 0, -131070, 131072, 2, -131071, 65536, 2, -131072, 65536, 2, -65537, 65536, 2, -65538, 65536, 2, -65539, 0, 2)

[node name="Label2" type="Label" parent="TextDialog"]
z_index = 10
texture_filter = 1
offset_left = -44.0
offset_top = -60.0
offset_right = 44.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mflg4")
theme_override_font_sizes/font_size = 16
text = "Warren        ↙️"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PopupBackground" type="TileMap" parent="."]
modulate = Color(0.671688, 0.75068, 0.499772, 1)
texture_filter = 1
tile_set = ExtResource("4_r4u8d")
format = 2
layer_0/tile_data = PackedInt32Array(-196608, 131073, 2, -131073, 1, 2, -262144, 131073, 0, -196609, 1, 0)

[node name="Label" type="Label" parent="PopupBackground"]
z_index = 10
texture_filter = 1
offset_left = -3.0
offset_top = -32.0
offset_right = 3.0
offset_bottom = -19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mflg4")
theme_override_font_sizes/font_size = 16
text = "G
"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
